# arcabouco

./: .gitignore  CMakeLists.txt  README.md
examples/: run.sh
examples/list/: CMakeLists.txt
examples/list/scripts/: testelista.script
examples/list/src/: lista.c  lista.h  testlis.c
include/: geraalt.h  intrpcnt.h  tabsimb.h
include/autotest/: cespdin.h  generico.h  intrpced.h  intrpcnt.h  tabsimb.h
src/: cespdin.c  conta.c  generico.c  geraalt.c  intrpced.c  intrpcnt.c  lerparm.c  princip.c  tabsimb.c  tst_espc.c
